# Streaming_Agent

./: .env  README.md  pyproject.toml
src/streaming_agent/: __init__.py  chatbot.py
